Translate Labels Menu

--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -1557,3 +1557,11 @@ react.partialReceiving.error.dateBeforeShipment.label=The date cannot be before 
 react.partialReceiving.error.quantityToReceiveNegative.label=Quantity to receive can't be negative
 react.partialReceiving.error.expiryWithoutLot.label=Items with an expiry date must also have a lot number.
 react.partialReceiving.error.lotAndExpiryControl.label=Both lot number and expiry date are required for this item.
+
+#Destiny Software
+analytics.label=Analítica
+order.purchasing.label=Compras
+order.createPurchase.label=Crear orden de compra
+order.listPurchase.label=Listar ordenes de compra
+location.listSuppliers.label=Listar suministros
+shipment.shipfromPO.label=Envios por orden de compra
