Translate Labels Menu

--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -226,7 +226,7 @@ default.button.back.label=Volver
 default.button.cancel.label=Cancelar
 default.button.clear.label=Limpiar
 default.button.close.label=Cerrar
-default.button.create.label=
+default.button.create.label=Crear
 default.button.delete.confirm.message=¿Está seguro?
 default.button.delete.label=Borrar
 default.button.edit.label=Editar sección
@@ -350,7 +350,7 @@ default.saved.message={0} guardada
 default.search.label=Buscar
 default.selectOne.label=Seleccionar uno ...
 default.separateMultipleAddresses.message=Separe las direcciones múltiples con una coma.
-default.settings.label=ajustes
+default.settings.label=Ajustes
 default.show.label=Mostrar {0}
 default.showAll.label=Mostrar todo
 default.signup.label=Alta
@@ -896,7 +896,7 @@ product.add.label=Agregar nuevo producto
 product.addPhoto.label=Añadir foto
 product.addAnotherCategory.label=Añadir otra categoría
 product.allSavedSuccessfully.message=Todos los productos se han guardado correctamente
-product.batchEdit.label=edición por lotes de productos
+product.batchEdit.label=Edición por lotes de productos
 product.browse.label=Examinar productos
 product.code.label=Código del Producto
 product.coldChain.label=Cadena de Frío
@@ -1565,3 +1565,71 @@ order.createPurchase.label=Crear orden de compra
 order.listPurchase.label=Listar ordenes de compra
 location.listSuppliers.label=Listar suministros
 shipment.shipfromPO.label=Envios por orden de compra
+default.inbound.label=Entrantes
+inbound.create.label=Crear movimiento de entrada
+inbound.list.label=Listar movimientos de entrada
+stockRequest.create.label=Crear solicitud de Stock
+react.putAway.createPutAway.label=Crear entradas
+react.putAway.list.label=Entradas
+outbound.label=Salientes
+outbound.create.label=Crear movimiento de salida
+outbound.list.label=Listar movimientos de salida
+stockMovements.label=Movimientos de stock
+reporting.label=Reportes
+report.inventoryReports.label=Reportes de inventario
+report.inStockReport.label=Reporte In Stock
+report.binLocationReport.label=Reporte ubicación Bin
+report.expiredStockReport.label=Reporte stock caducado
+report.expiringStockReport.label=Reporte stock en expiración
+report.inventoryByLocationReport.label=Inventario por localización
+report.transactionReports.label=Reportes de transacción
+report.consumption.label=Reporte de consumo
+report.requestDetailReport.label=Solicitar informe detallado
+dataExports.label=Exportar información
+product.exportAsCsv.label=Exportar como CSV
+export.productSources.label=Exportar fuentes de producto
+export.latestInventory.label=Exportar ultimo inventario
+export.inventoryLevels.label=Exportar niveles de inventario
+export.requisitions.label=Exportar Requisitos
+export.productDemand.label=Exportar demanda de productos
+export.custom.label=Exportar información personalizada
+product.catalogs.label=Catalogos
+inventoryLevels.label=Niveles de inventario
+productSuppliers.label=Proveedores de productos
+product.associations.label=Asociaciones de productos
+productSupplier.productSourcePreferencesExport.label=Exportar preferencias del producto
+import.inventory.label=Importar inventario
+import.inventoryLevel.label=Importar niveles de inventario
+requisitionTemplates.label=Lista de stock
+requisitionTemplates.list.label=Listar stock
+requisitionTemplates.create.label=Crear lista de stock
+console.label=Consola
+dataImport.label=Importar data
+dataMigration.label=Migración data
+email.label=Configuración de Email
+localization.label=Localización
+parties.label=Ubicaciones
+locationGroups.label=Grupos de ubicación
+locationTypes.label=Tipos de ubicación
+organizations.label=Organizaciones
+transactionsTypes.label=Tipos de transacción
+default.other.label=Otros
+budgetCode.label=Códigos de presupuesto
+containerTypes.label=Tipos de contenedor
+documents.label=Documentos
+documentTypes.label=Tipos de documento
+eventTypes.label=Tipos de evento
+configuration.label=Configuración
+react.dashboard.inventoryByLotAndBin.title.label=Detalles de inventario por Lote y Bin
+react.dashboard.receivingBin.title.label=Productos en recepción
+react.dashboard.inProgressShipments.title.label=Tus envios en progreso
+react.dashboard.inProgressPutaways.title.label=Tus entradas en progreso
+react.dashboard.inventorySummaryData.title.label=Resumen de inventario
+react.dashboard.expirationSummaryData.title.label=Expiración de inventario
+react.dashboard.incomingStock.title.label=Movimiento de entrada de inventario por estado
+react.dashboard.outgoingStock.title.label=Movimiento de salida de inventario en progreso
+react.dashboard.delayedShipments.title.label=Demoras en movimientos de entrada de stock
+react.dashboard.discrepancy.title.label=Articulos recibidos con discrepancia
+react.dashboard.receivedStockData.title.label=Movimientos de stock recibidos por mes
+react.dashboard.itemsInventoried.title.label=Items inventariados este mes
+react.invoice.addItems.label=Agregar Items
